# breda_form_py

./: .gitignore  README.md  main.py  pyproject.toml  railway.json  requirements.txt  rxconfig.py
.github/workflows/: deploy.yml
.web/: .gitignore  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/app/: root.jsx
.web/app/routes/: [formulari].$[sheet]._index.jsx  _index.jsx
.web/utils/: context.js
formulari_app/: formulari_app.py
formulari_app/lib/: config.py  constants.py  copy.py  error_handling.py  get_credentials.py  google_credentials.py  logger.py  rate_limiter.py  validators.py
formulari_app/lib/tests/: test_config.py  test_error_handling.py  test_rate_limiter.py  test_validators.py
formulari_app/models/: models.py
formulari_app/pages/formulari/components/: wrapper.py
formulari_app/pages/formulari/views/: formulari.py
formulari_app/services/: sheets_service.py
formulari_app/services/google_clients/: google_client.py  sheets_client.py
tests/: test_e2e_form.py
