[project]
name = "breda-formulari-reflex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
[project.scripts]
app = "formulary_app/formulary_app:app"
dependencies = [
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "reflex>=0.8.27",
]
[tool.setuptools.packages.find]
include = ["formulari_app*"]
exclude = ["assets*"]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
]

