[project]
name = "breda-formulari-reflex"
version = "1.0.0"
description = "Formulari in python for local parties"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "reflex>=0.8.28",
]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["formulari_app"]

